# from-vibe-to-verified

stockviz/: .gitignore  Cargo.toml  README.md  bacon.toml  stock_viz_spec.md
stockviz/.cargo/: mutants.toml
stockviz/.config/tracey/: config.styx
stockviz/.cursor/skills/rust-fuzz-target-expert/: SKILL.md
stockviz/.github/workflows/: ci.yml
stockviz/docs/: ARBITRARY_TESTING.md  FUZZING.md  MUTATION_TESTING.md  TALK_RUNBOOK.md  TALK_SLIDE_SYNC.md  TALK_STATS.md  TALK_TAG_APPENDIX.md  TRACEY_CODE_MAPPING.md  mutants_after.txt  mutants_baseline.txt  talk_tags_spec.md
stockviz/fuzz/: Cargo.toml
stockviz/fuzz/fuzz_targets/: csv_parse.rs  my_target.rs
stockviz/proptest-regressions/: chart.txt
stockviz/scripts/: README.md  check_fmt.sh  ci_local_default.sh  ci_local_nightly.sh  ci_local_schwab.sh  ci_pr_fast.sh  clippy_default.sh  clippy_schwab.sh  coverage.sh  fuzz_coverage.sh  fuzz_csv.sh  fuzz_pipeline.sh  nextest_default.sh  nextest_schwab.sh  quality_gate.sh  run_mutants.sh  run_tracy_profile.sh  seed_pipeline_corpus.sh  tracey_report.sh  verify_provider_exclusive.sh
stockviz/src/: chart.rs  cli.rs  data.rs  error.rs  fuzz_harness.rs  kittest_tests.rs  lib.rs  main.rs  talk_quiz.rs  talk_tracey.rs  test_inputs.rs  tracey_meta_tests.rs
stockviz/src/download/: mod.rs  twelve_data.rs
stockviz/src/gui/: app.rs  mod.rs
stockviz/tests/: README.md  sealed_demo.rs
