[package]
name = "stockviz"
version = "0.1.0"
edition = "2024"
description = "StockViz demo: download OHLCV, graph candles + SMA + volume per stock_viz_spec.md"

# r[impl app.deps]

[features]
default = ["twelve-data", "gui"]
# r[build.provider.exclusive]: at most one of these may be enabled.
twelve-data = ["dep:reqwest", "dep:serde_json"]
schwab = []
gui = ["dep:eframe", "dep:egui"]

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["std"] }
chrono-tz = "0.10"
clap = { version = "4.6", features = ["derive"] }
csv = "1.3"
eframe = { version = "0.34.2", default-features = true, optional = true }
egui = { version = "0.34", optional = true }
flexi_logger = "0.29"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
tempfile = "3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
egui_kittest = { version = "0.34", features = ["eframe"] }
mockito = "1.7"
proptest = "1.11"
proptest-arbitrary-interop = "0.1"
sealed_test = "1.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(fuzzing)'] }
