[package]
name = "stockviz-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = "0.4"
stockviz = { path = "..", default-features = false, features = ["twelve-data"] }

[[bin]]
name = "csv_parse"
path = "fuzz_targets/csv_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "my_target"
path = "fuzz_targets/my_target.rs"
test = false
doc = false
bench = false

[workspace]
